--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,7 +6,9 @@ authors = ["Fernando Cejas <android10@fernandocejas.com>"]
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.3.2", features = ["derive"] }
+clap = { version = "4.4.4", features = ["derive"] }
+clap_complete = "4.4.1"
+dialoguer = "0.10.4"
 ansi_term = "0.12.1"
 
 [dev-dependencies]
